# qiree-refactor

./: CMakeLists.txt  COPYRIGHT  README.md
.github/workflows/: build-fast.yml
app/: qir-xacc.cc
cmake/: QIREEConfig.cmake.in  QIREEUtils.cmake  QQIRConfig.cmake.in
doc/: CMakeLists.txt
scripts/cmake-presets/: goldfinger.json
scripts/dev/: generate-bindings.py  qiree-gen.py
src/: CMakeLists.txt  qiree_config.h.in  qiree_version.h.in  qqir_config.h.in  qqir_version.h.in  stub.cc
src/qiree/: Executor.cc  Executor.hh  LlvmExecutor.cc  LlvmExecutor.hh  MathInterface.hh  Module.cc  Module.hh  QuantumInterface.hh  ResultInterface.hh  RuntimeInterface.hh  Types.hh
src/qiree/detail/: EndGuard.hh  FunctionChecker.hh  GlobalMapper.hh
src/qirxacc/: CMakeLists.txt  XaccQuantum.cc  XaccQuantum.hh
test/: CMakeLists.txt  Executor.test.cc  LlvmExecutor.test.cc  Module.test.cc  QuantumTestImpl.cc  QuantumTestImpl.hh  Stream.hh  qiree_test.hh
test/data/: minimal.ll
test/qiree/: Executor.test.cc  QuantumTestImpl.cc  QuantumTestImpl.hh
test/qirxacc/: XaccQuantum.test.cc
